--- a/views/widget2/guess_like/guess_like.css
+++ b/views/widget2/guess_like/guess_like.css
@@ -8,7 +8,7 @@
 .likes-item+.article{margin:8px 0 18px;color:#333;font-size:16px}
 .likes-item img{float:left;width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
 .gw-list .people-action,.likes-item .people-action{width:80px;height:24px;-webkit-border-radius:10px;border-radius:10px;background:#fdf3f2;color:#c13232;text-align:center;font-size:12px;line-height:24px}
-.gw-list .people-name,.likes-item .people-name{margin-right:64px;margin-left:10px;padding-right:20px;background:url(../assets/img/1v.png) no-repeat;background-position:right center;font-size:14px}
+.gw-list .people-name,.likes-item .people-name{margin-right:64px;margin-left:10px;padding-right:20px;background:url(/assets/img/1v.png) no-repeat;background-position:right center;font-size:14px}
 .likeItem{width: 280px;border:solid 1px #dbdbdb;}
 .likeItem > h2{height: 50px;line-height: 50px;font-size: 18px;color: #333;background: #f3f3f3;}
 .likeItem > h2 > em{
