--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -127,6 +127,15 @@
             bottom: 66px;
             cursor: pointer;
         }
+        .loading-mask{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            line-height: 292px;
+            color: #fff;
+            font-size: 20px;
+        }
     </style>
 </head>
 <body style="background: #f5f5f5">
@@ -187,6 +196,7 @@
                             <div class="info">方便用户随时联系我</div>
                         </div>
                         {% endif %}
+                        <div class="loading-mask" style="display: none;">正在上传</div>
                     </div>
                 </div>
                 <div class="code-box qq-box" id="qq-box">
@@ -205,6 +215,7 @@
                             <div class="info">方便用户随时联系我</div>
                         </div>
                         {% endif %}
+                        <div class="loading-mask" style="display: none;">正在上传</div>
                     </div>
                 </div>
             </div>
@@ -250,22 +261,31 @@
             $(this).removeClass("upload_drag_hover");
         },
         onProgress: function(file, loaded, total) {
-            var eleProgress = $("#uploadProgress_" + file.index), percent = (loaded / total * 100).toFixed(2) + '%';
-            eleProgress.show().html(percent);
+            /*var eleProgress = $("#uploadProgress_" + file.index), percent = (loaded / total * 100).toFixed(2) + '%';
+            eleProgress.show().html(percent);*/
+            $('#weixin-box').find('.loading-mask').show();
         },
         onSuccess: function(file, response) {
             var resData = JSON.parse(response);
             console.log('onSuccess~~~thl', resData);
             if (resData.errno == 0) {
                 $('#weixin-box').find('.no-code').hide();
-                $('#weixin-box').find('.has-code').show().css("background-image","url(" + resData.data[0] + ")");
+                $('#weixin-box').find('.has-code').remove();
+                var html ='<div class="has-code" style="background-image: url('+ resData.data[0] +')">'+
+                    '<div class="code-mask">'+
+                    '<label class="upload-code-btn"  for="post-wx-code">修改我的微信二维码</label>'+
+                    '</div>'+
+                    '</div>';
+                $('#weixin-box').find('.code-box-in').append($(html));
             }
             else {
                 layer.msg(resData.message);
             }
+            $('#weixin-box').find('.loading-mask').hide();
         },
         onFailure: function(file) {
-            console.log('失败回调')
+            $('#weixin-box').find('.loading-mask').hide();
+            layer.msg('服务器出小差了，请重试');
         }
     };
     ZXXFILE = $.extend(ZXXFILE, params);
@@ -300,22 +320,31 @@
             $(this).removeClass("upload_drag_hover");
         },
         onProgress: function(file, loaded, total) {
-            var eleProgress = $("#uploadProgress_" + file.index), percent = (loaded / total * 100).toFixed(2) + '%';
-            eleProgress.show().html(percent);
+           /* var eleProgress = $("#uploadProgress_" + file.index), percent = (loaded / total * 100).toFixed(2) + '%';
+            eleProgress.show().html(percent);*/
+            $('#qq-box').find('.loading-mask').show();
         },
         onSuccess: function(file, response) {
             var resData = JSON.parse(response);
             console.log('onSuccess~~~thl', resData);
             if (resData.errno == 0) {
                 $('#qq-box').find('.no-code').hide();
-                $('#qq-box').find('.has-code').show().css("background-image","url(" + resData.data[0] + ")");
+                $('#qq-box').find('.has-code').remove();
+                var html ='<div class="has-code" style="background-image: url('+ resData.data[0] +')">'+
+                        '<div class="code-mask">'+
+                        '<label class="upload-code-btn"  for="post-qq-code">修改我的QQ二维码</label>'+
+                        '</div>'+
+                        '</div>';
+                $('#qq-box').find('.code-box-in').append($(html));
             }
             else {
                 layer.msg(resData.message);
             }
+            $('#qq-box').find('.loading-mask').hide();
         },
         onFailure: function(file) {
-            console.log('失败回调')
+            $('#qq-box').find('.loading-mask').hide();
+            layer.msg('服务器出小差了，请重试');
         }
     };
     ZXXFILEQQ = $.extend(ZXXFILEQQ, paramsQQ);
