--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -4,19 +4,47 @@
 <head>
 	{% include "header_new.html" %}
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/article_detail.css" >
+  <style>
+    .banner-box{
+      margin-top: 20px;
+      height: 130px;
+      /*background-color: yellow;*/
+    }
+    .banner-box-left{
+      background: #dcdcdc;
+      height: 130px;
+    }
+    .banner-box-right{
+      background: #dcdcdc;
+      height: 130px;
+    }
+    .slider .slider-dot ul{
+      left:97%;
+    }
+    .slider .slider-dot ul li{
+      border-radius: 50%;
+    }
+    .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
+      margin-top: -33px
+    }
+  </style>
 </head>
 <body style="background:#f5f5f5;">
   <!-- ===头部=== -->
   {% include "widget/top/top.html" %}
   <!-- ====导航===== -->
-  {% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
-  {{nav_seventh.nav_seventh("#",tdk.cityid,helper)}}
+  {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+  {{ new_nav_red.new_nav_red(helper) }}
+  <!--轮播图广告-->
+  <div class="dui-layout-lg clearfix banner-box">
+    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
+    <div class="dui-layout-div"></div>
+    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider2.html" %}</div>
+  </div>
   <div class="dui-layout-lg clearfix dui-layout-padding" >
     <div class="dui-layout-silde">
-      <!-- ====广告图1==== -->
-      <div class="adviser-case-detail-map" id="AD_{% if userinfo.usertype == 2 %}ADVISOR{% elif userinfo.usertype == 3 %}CANZAN{% endif %}_P_ARTICLE_DETAIL_SEAT1"></div>
       <!-- =======顾问头像关注====== -->
-      <div style="margin-top: 20px;" data-usertype="{{userinfo.usertype}}" id="userinfo">
+      <div data-usertype="{{userinfo.usertype}}" id="userinfo">
         {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
         {% if userinfo.status == 1 %} {#离职#}
           {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
@@ -47,10 +75,7 @@
     </div>
     <div class="dui-layout-div"></div>
     <div class="dui-layout-con" >
-      <!--=====广告图2====-->
-      <div class="adviser-case-detail-map" id="AD_{% if userinfo.usertype == 2 %}ADVISOR_P_ARTICLE_DETAIL{% elif userinfo.usertype == 3 %}CANZAN_P_ARTICLE_DETAIL{% endif %}_SEAT2"></div>   
-      <div class="dui-box-shadow" >
-        <div class="adviser-case-detail-con" >
+        <div class="adviser-case-detail-con" style="margin-top: 0" >
           {% import "widget2/community_nav/community_nav.html" as community_nav %}
           {% if userinfo.status == 1 %} {#离职顾问#}
             {{community_nav.adviser_nav_leave('专栏', userinfo.uid, helper)}}
@@ -128,16 +153,35 @@
     }
   </script>
   <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
+  <script src="{{helper.cdnhost}}/assets/js/nav.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/view_count_min.js"></script>
   <script>
   $(function(){
-    
+      $('.banner-box-left .slider').xSlider({
+          //轮播图配置
+//          autoplay : 500,
+          current: 0,
+          speed: 500,
+          intervalTime: 5000,
+          pagination: true
+      });
+      $('.banner-box-right .slider').xSlider({
+          //轮播图配置
+//          autoplay : 500,
+//            mode:'vertical',
+          current: 0,
+          speed: 1000,
+          intervalTime: 5000,
+          slidesPerView : 2,
+          slidesPerGroup : 2,
+//          pagination: true
+      });
     window._bd_share_config={
           "common":{
               "bdSnsKey":{},
