--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -179,7 +179,29 @@
         }
       $('.right-main').append(favHtml);
       $('.report-btn').on("click",report); //点击举报
-      $('.share-btn').on('click',share); //点击分享
+      window._bd_share_config={
+        "common":{
+          "bdSnsKey":{},
+          "bdText":"",
+          "bdMini":"1",
+          "bdMiniList":false,
+          "bdPic":"",
+          "bdStyle":"0",
+          "bdSize":"16",
+          "bdUrl":window.location.href
+        },
+        "share":{},
+        "image":{
+          "viewList":["tsina","weixin","qzone"],
+          "viewText":"分享到：","viewSize":"16"
+        },
+        "selectShare":{
+          "bdContainerClass":null,
+          "bdSelectMiniList":["tsina","weixin","qzone"]
+        }
+      };
+      console.log(_bd_share_config.common.bdUrl)
+      with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
     }
     function addArticleImg (imgList) {
       if(imgList==undefined){
@@ -256,7 +278,6 @@
         })
     });
     $('.report-btn').on("click",report); //点击举报
-    $('.share-btn').on('click',share); //点击分享
     function report(){
         //举报调取函数
         if(login_ss == undefined){
@@ -354,16 +375,29 @@
             }
         });
     }
-    function share(){
-      //调取分享函数
-        var that =this;
-        layer.open({
-          type: 2,
-          title: '分享到',
-          area: ['262px', '327px'],
-          content: ['/share?title='+encodeURI($(that).attr('data-title'))+'&url='+$(that).attr('data-url'), 'no']
-        });
-    }
+    window._bd_share_config={
+      "common":{
+        "bdSnsKey":{},
+        "bdText":"",
+        "bdMini":"1",
+        "bdMiniList":false,
+        "bdPic":"",
+        "bdStyle":"0",
+        "bdSize":"16",
+        "bdUrl":window.location.href
+      },
+      "share":{},
+      "image":{
+        "viewList":["tsina","weixin","qzone"],
+        "viewText":"分享到：","viewSize":"16"
+      },
+      "selectShare":{
+        "bdContainerClass":null,
+        "bdSelectMiniList":["tsina","weixin","qzone"]
+      }
+    };
+    console.log(_bd_share_config.common.bdUrl)
+    with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
   })
 </script>
 </body>
