--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -134,3 +134,26 @@
   background:url(../img/qq.png) no-repeat 0 0;
   background-size: 20px 20px;
 }
+/*轮播图*/
+.banner-box{
+  margin-top: 20px;
+  height: 130px;
+  /*background-color: yellow;*/
+}
+.banner-box-left{
+  background: #dcdcdc;
+  height: 130px;
+}
+.banner-box-right{
+  background: #dcdcdc;
+  height: 130px;
+}
+.slider .slider-dot ul{
+  left:97%;
+}
+.slider .slider-dot ul li{
+  border-radius: 50%;
+}
+.slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
+  margin-top: -33px
+}
