--- a/public/assets/css/guwen_yonghu.css
+++ b/public/assets/css/guwen_yonghu.css
@@ -167,3 +167,26 @@
 .bot_comment li.dian{
   border-right: none;
 }
+/*轮播图*/
+.banner-box{
+  margin-top: 20px;
+  height: 130px;
+  /*background-color: yellow;*/
+}
+.banner-box-left{
+  background: #dcdcdc;
+  height: 130px;
+}
+.banner-box-right{
+  background: #dcdcdc;
+  height: 130px;
+}
+.slider .slider-dot ul{
+  left:97%;
+}
+.slider .slider-dot ul li{
+  border-radius: 50%;
+}
+.slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
+  margin-top: -33px
+}
