--- a/views/so_article.html
+++ b/views/so_article.html
@@ -282,7 +282,7 @@
                         '<span>'+ item.tag_list +'</span>'+
                     '</div>'+
                     '</div>'+
-                    '<div class="info-desc">'+ item.introduce +'<a href="'+fn.articleUrlgen('blog',item.user_info.uid.toString(),'article='+item.id.toString())+'">【查看详情】</a></div>'+
+                    '<div class="info-desc">'+ fn.ellipsis(item.introduce) +'<a href="'+fn.articleUrlgen('blog',item.user_info.uid.toString(),'article='+item.id.toString())+'">【查看详情】</a></div>'+
                 '<div class="time">'+ item.update_time +'</div>'+
                 '</div>'+
                 '</div>';
