--- a/views/so_article.html
+++ b/views/so_article.html
@@ -197,7 +197,7 @@
             </div>
             {% else %}
             <div class="has-result">
-                <div class="result-type-bar">
+                <div class="result-type-bar" data-order="{{order}}">
                     <a href="{{helper.urlgen('so_article','q='+ keyword)}}" {% if order == '' %}class="active"{% else %}{% endif %}>综合</a>
                     <a href="{{helper.urlgen('so_article','q='+ keyword, 'order=add_time')}}" {% if order == 'add_time' %}class="active"{% else %}{% endif %}>最新new</a>
                     <a href="{{helper.urlgen('so_article','q='+ keyword, 'order=views')}}" {% if order == 'views' %}class="active"{% else %}{% endif %}>最热hot</a>
