--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -94,7 +94,7 @@
                         {
                         "companyAddress": "广州分公司：广州市天河区体育西路191号中石化大厦b座33楼3310—3321",
                         "companyTel": "服务专线：020-38175656",
-                        "companyName": "F-广州",
+                        "companyName": "G-广州",
                         "companyId": "3"
                         },
                         {
