--- a/public/assets/css/guwen_yonghu.css
+++ b/public/assets/css/guwen_yonghu.css
@@ -123,7 +123,7 @@
   width: 4px;
   height: 20px;
 }
-.bdshare-button-style0-16 .bds_tsinas {
+.bdshare-button-style0-16 .weixin-pengyouquan {
   background:url(../img/pyq.png) no-repeat 0 0;
   background-size: 20px 20px;
   width: 4px;
