--- a/views/so_article.html
+++ b/views/so_article.html
@@ -197,7 +197,7 @@
             </div>
             {% else %}
             <div class="has-result">
-                <div class="result-type-bar" data-order="{{order}}">
+                <div class="result-type-bar" data-order="{{order}}" id="result-type-bar">
                     <a href="{{helper.urlgen('so_article','q='+ keyword)}}" {% if order == '' %}class="active"{% else %}{% endif %}>综合</a>
                     <a href="{{helper.urlgen('so_article','q='+ keyword, 'order=add_time')}}" {% if order == 'add_time' %}class="active"{% else %}{% endif %}>最新new</a>
                     <a href="{{helper.urlgen('so_article','q='+ keyword, 'order=views')}}" {% if order == 'views' %}class="active"{% else %}{% endif %}>最热hot</a>
@@ -293,6 +293,7 @@
             var page = $(this).data('page')*1+1;
             var thisObj = $(this);
             var per_page = 15;
+            var order = $('#result-type-bar').data('order');
             $.ajax({
                 url: ajaxUrlPrefix.nodeapi + '/cmsapi/load_more_article',
                 datatype: 'json',
@@ -300,7 +301,8 @@
                     key_word: keyword,
                     city_id: area,
                     "per_page": per_page,
-                    "page": page
+                    "page": page,
+                    "order": order
                 },
                 success: function (revmsg) {
                     if (revmsg.code == 0) {
